promotion fail 처리.